--- a/Unique.Id.To.Be.Replaced.UI/WindowResources/MainWindow/MainWindow.xaml
+++ b/Unique.Id.To.Be.Replaced.UI/WindowResources/MainWindow/MainWindow.xaml
@@ -1,15 +1,15 @@
-﻿<Window x:Class="SimpleSerialLoggerGui.UI.WindowResources.MainWindow.MainWindow"
+﻿<Window x:Class="Unique.Id.To.Be.Replaced.UI.WindowResources.MainWindow.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=PresentationFramework"
-        xmlns:mainWindow="clr-namespace:SimpleSerialLoggerGui.UI.WindowResources.MainWindow"
+        xmlns:mainWindow="clr-namespace:Unique.Id.To.Be.Replaced.UI.WindowResources.MainWindow"
         xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
         d:DataContext="{d:DesignInstance Type=mainWindow:MainWindowViewModel, IsDesignTimeCreatable=True}"
         mc:Ignorable="d"
         Style="{StaticResource StandardWindow}"
-        Title="SimpleSerialLoggerGui" Height="600" Width="1400"
+        Title="Unique.Id.To.Be.Replaced" Height="600" Width="1400"
         Background="#222222">
 
     <b:Interaction.Triggers>
@@ -64,16 +64,7 @@
 
         <DockPanel Grid.Row="1" Grid.Column="1" Margin="5">
             <Border BorderBrush="Gray" BorderThickness="1" Padding="2">
-                <DockPanel>
-                    <ScrollViewer>
-                        <StackPanel>
-                            <ItemsControl ItemsSource="{Binding LocalSessionPersistentState.SettingsSections }"
-                                          ItemTemplate="{StaticResource SettingsSectionTemplate}"
-                                          Padding="0" Margin="0" />
-
-                        </StackPanel>
-                    </ScrollViewer>
-                </DockPanel>
+                <TextBlock Text="Hello world!" />
             </Border>
         </DockPanel>
 
