--- a/Unique.Id.To.Be.Replaced.UI/WindowResources/MainWindow/MainWindow.xaml
+++ b/Unique.Id.To.Be.Replaced.UI/WindowResources/MainWindow/MainWindow.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="Unique.Id.To.Be.Replaced.UI.WindowResources.MainWindow.MainWindow"
+﻿<!-- ReSharper disable once Xaml.StaticResourceNotResolved because the XAML doesn't know when it's been set up in App.xaml.cs, which it is -->
+<Window x:Class="Unique.Id.To.Be.Replaced.UI.WindowResources.MainWindow.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
